Fix on ios 2

--- a/impostorCode/impostorSettingsTab.css
+++ b/impostorCode/impostorSettingsTab.css
@@ -226,3 +226,12 @@ body {
     border-radius:2em;
     box-shadow: 0px 0px 0.5em 0.1em #8638b9;
 }
+
+input {
+    -webkit-appearance: none;
+    appearance: none;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+}
